force-app/main/default/objects/TOP_Flow_Step__mdt/TOP_Flow_Step__mdt.object-meta.xml
<CustomObject>
    <description>Metadata to define flow  step for product activation in Telia Onboarding Portal</description>
    <label>TOP Flow Step</label>
    <pluralLabel>TOP Flow Steps</pluralLabel>
</CustomObject>