force-app/main/default/objects/TOP_Flow_Step__mdt/fields/Activation_Add__c.field-meta.xml
<CustomField>
    <fullName>Activation_Add__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activation Add</label>
    <type>Checkbox</type>
</CustomField>