force-app/main/default/objects/TOP_Flow_Step__mdt/fields/Activation_Delete__c.field-meta.xml
<CustomField>
    <fullName>Activation_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activation Delete</label>
    <type>Checkbox</type>
</CustomField>