force-app/main/default/objects/TOP_Flow_Step__mdt/fields/Activation_Update__c.field-meta.xml
<CustomField>
    <fullName>Activation_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activation Update</label>
    <type>Checkbox</type>
</CustomField>