force-app/main/default/objects/TOP_Flow_Step__mdt/fields/Columns__c.field-meta.xml
<CustomField>
    <fullName>Columns__c</fullName>
    <description>Columns in the table to edit attributes of the activation lines</description>
    <inlineHelpText>Columns in the table to edit attributes of the activation lines</inlineHelpText>
    <label>Columns</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>