force-app/main/default/objects/TOP_Flow_Step__mdt/fields/Custom_Components__c.field-meta.xml
<CustomField>
    <fullName>Custom_Components__c</fullName>
    <description>Comma separated list of the custom lwc component javascript classes to display extra logic in the current step</description>
    <inlineHelpText>Comma separated list of the custom lwc component javascript classes to display extra logic in the current step</inlineHelpText>
    <label>Custom Components</label>
    <length>255</length>
    <type>Text</type>
</CustomField>