force-app/main/default/objects/TOP_Flow_Step__mdt/fields/Long_Label__c.field-meta.xml
<CustomField>
    <fullName>Long_Label__c</fullName>
    <description>Reference to Custom Label, value is used to details about the flow step</description>
    <inlineHelpText>Reference to Custom Label, value is used to details about the flow step</inlineHelpText>
    <label>Long Label (Custom Label Ref)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>