force-app/main/default/objects/TOP_Flow_Step__mdt/fields/Mass_Edit_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Mass_Edit_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Option to display first column as selectable and mass edit selected rows</description>
    <inlineHelpText>Option to display first column as selectable and mass edit selected rows</inlineHelpText>
    <label>Mass Edit Allowed</label>
    <type>Checkbox</type>
</CustomField>