force-app/main/default/objects/TOP_Flow_Step__mdt/fields/Navigation_Buttons_Position__c.field-meta.xml
<CustomField>
    <fullName>Navigation_Buttons_Position__c</fullName>
    <description>Where to display flow navigation buttons</description>
    <inlineHelpText>Where to display flow navigation buttons</inlineHelpText>
    <label>Navigation Buttons Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top</fullName>
                <default>true</default>
                <label>Top</label>
            </value>
            <value>
                <fullName>Bottom</fullName>
            </value>
            <value>
                <fullName>Top and Bottom</fullName>
            </value>
            <value>
                <fullName>Hidden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>