force-app/main/default/objects/TOP_Flow_Step__mdt/fields/No_Empty_Field_Filter__c.field-meta.xml
<CustomField>
    <fullName>No_Empty_Field_Filter__c</fullName>
    <description>Leave it empty when no filter to apply otherwise comma separated activation line field API names</description>
    <inlineHelpText>Leave it empty when no filter to apply otherwise comma separated activation line field API names</inlineHelpText>
    <label>No Empty Field Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>