force-app/main/default/objects/TOP_Flow_Step__mdt/fields/Product_Family_Filter__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_Filter__c</fullName>
    <description>Leave it empty when no filter to apply otherwise comma separated product families</description>
    <inlineHelpText>Leave it empty when no filter to apply otherwise comma separated product families</inlineHelpText>
    <label>Product Family Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>