force-app/main/default/objects/TOP_Flow_Step__mdt/fields/Product_Group_Filter__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_Filter__c</fullName>
    <description>Leave it empty when no filter to apply otherwise comma separated product groups</description>
    <inlineHelpText>Leave it empty when no filter to apply otherwise comma separated product groups</inlineHelpText>
    <label>Product Group Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>