force-app/main/default/objects/TOP_Flow_Step__mdt/fields/Short_Label__c.field-meta.xml
<CustomField>
    <fullName>Short_Label__c</fullName>
    <description>Reference to Custom Label, value is used to display the Step name in the flow</description>
    <inlineHelpText>Reference to Custom Label, value is used to display the Step name in the flow</inlineHelpText>
    <label>Short Label (Custom Label Ref)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>