force-app/main/default/objects/TOP_Flow_Step__mdt/fields/Step_Utility_Component__c.field-meta.xml
<CustomField>
    <fullName>Step_Utility_Component__c</fullName>
    <description>LWC component name to support extra validation or filter match logic for more complex column content</description>
    <inlineHelpText>LWC component name to support extra validation or filter match logic for more complex column content</inlineHelpText>
    <label>Step Utility Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>