force-app/main/default/objects/TOP_Flow_Step__mdt/fields/Sub_Step_List__c.field-meta.xml
<CustomField>
    <fullName>Sub_Step_List__c</fullName>
    <description>Flow Step comma separated list displayed as sub-steps to the current flow step</description>
    <inlineHelpText>Flow Step comma separated list displayed as sub-steps to the current flow step</inlineHelpText>
    <label>Sub Step List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>