force-app/main/default/objects/TOP_Flow_Step__mdt/fields/Sub_Step_Style__c.field-meta.xml
<CustomField>
    <fullName>Sub_Step_Style__c</fullName>
    <description>How to display sub steps</description>
    <label>Sub Step Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tabs</fullName>
                <default>true</default>
                <label>Tabs</label>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>