force-app/main/default/objects/TOP_Flow_Step__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Short_Label__c</columns>
    <columns>Custom_Components__c</columns>
    <columns>No_Empty_Field_Filter__c</columns>
    <columns>Product_Family_Filter__c</columns>
    <columns>Product_Group_Filter__c</columns>
    <columns>Product_Code_Line_Filter__c</columns>
    <columns>Product_Code_Filter__c</columns>
    <columns>Columns__c</columns>
    <columns>Mass_Edit_Allowed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>